DASH-123 - avoid wrapping tabs in panels
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313078 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/dashboard/tool/src/webapp/css/dashboard.css
+++ b/dashboard/tool/src/webapp/css/dashboard.css
@@ -117,10 +117,11 @@ table tr.newRow:hover {
 h3.withNav {
     margin:1em 0;
 }
+
 .pagerCell{
-    vertical-align:bottom !important;
-    text-align:right;
-    padding:5px 0 
+    position:absolute;
+    top:40px;
+    right:0;
 }
 .pager {
     width:100%;
@@ -481,4 +482,7 @@ ul.tabPanel{
     display:block;
     
     text-decoration:none;
+}
+.mainPanel{
+    position:relative
 }
